--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,16 @@
   list-style: none;
   margin: 0.5rem;
 }
+
+button {
+  color: white;
+  padding: 1rem;
+  margin-right: 1.5rem;
+  margin-bottom: 3rem;
+  border: none;
+  background-color: rgb(48, 155, 197);
+  font-size: 1.25rem;
+  font-weight: 700;
+  width: 10rem;
+  cursor: pointer;
+}
